--- a/1/index.html
+++ b/1/index.html
@@ -25,12 +25,14 @@
         <h6>Welcome</h6>
 
         <hr>
-        <h2>formating tags</h2>
+        
 
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<br> Laudantium modi tempora vel aliquid ipsa nulla quis eos, harum incidunt quos natus vitae tenetur cumque impedit fuga nostrum fugiat magni dolor dolorem consequatur maiores. Alias reprehenderit quos debitis dolor tempore qui voluptatibus, atque ullam, fugit iste aliquid animi blanditiis incidunt nemo.</p>
        
         <hr>
         <!-- formating tags -->
+<!--    
+        <h2>formating tags</h2>
         <p> <strong>strong</strong> word <b>bold</b> word</p>
 
         <p>  <i>italic</i> word <em>emphasized</em> word </p>
@@ -39,7 +41,7 @@
 
         <p> <mark>marked</mark> word <u>underline</u>  word <del>deleted</del> word </p>
 
-        <p> 10<sup>2</sup>  h<sub>2</sub>o</p>
+        <p> 10<sup>2</sup>  h<sub>2</sub>o</p> -->
 
         <hr>
         <!-- 
