--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ Session Links
 <div class="my-20">
 <a href="1/index.html">Session 1</a>
 </div>
-
+<div class="my-20">
+    <a href="2/index.html">Session 2</a>
+</div>
 </div>
 </section>
 
