--- a/index.html
+++ b/index.html
@@ -47,11 +47,17 @@ Session Links
 
 <section>
 <div class="container">
+
 <div class="my-20">
-<a href="1/index.html">Session 1</a>
+    <a href="1/index.html">Session 1</a>
 </div>
+
 <div class="my-20">
     <a href="2/index.html">Session 2</a>
+</div>
+
+<div class="my-20">
+    <a href="3/index.html">Session 3</a>
 </div>
 </div>
 </section>
